<resources>
    <string name="app_name">ADCMS_MobileApp_V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_myClinic">Clinic</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_patient">Patient</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>