<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.adcms_mobileapp_v2.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.example.adcms_mobileapp_v2.ui.patient.PatientFragment"
        android:label="@string/menu_patient"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.adcms_mobileapp_v2.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_finance"
        android:name="com.example.adcms_mobileapp_v2.ui.finance.FinanceFragment"
        android:label="@string/menu_finance"
        tools:layout="@layout/fragment_finance" />
    <fragment
        android:id="@+id/nav_myClinic"
        android:name="com.example.adcms_mobileapp_v2.ui.clinic.ClinicFragment"
        android:label="@string/menu_myClinic"
        tools:layout="@layout/fragment_clinic" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.adcms_mobileapp_v2.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>